feat: remaining phase-2
